# MovieRecEngine-pypi

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
Examples/: Predict_Sample.csv
MovieRecEngine/: __init__.py  __main__.py
MovieRecSys/: MovieRecSys.py
